# planador-iot

./: .env.example  .gitignore  Cargo.toml  EXPLICACAO_GRAFICOS.md  Makefile  README.md  SAFETY_CHECKLIST.md  TESTES_COVERAGE.md  WIRING_GUIDE.md  build.rs  diagram.json  platformio.ini  pyproject.toml  rust-toolchain.toml  setup.bat  setup.sh  wokwi.toml
.cargo/: config.toml
scripts/: install-all.sh  quick-start.sh  test-hardware.sh
src/micropython/: README_COMPILATION.md  README_ESP32.md  benchmark_performance.py  boot.py  build.py  config.py  config_minimal.py  custom_logging.py  detect_platform.py  hardware.py  install_dev_tools.py  main.py  main_modular.py  pid_controller.py  pin_reference.py  release_system.py  sensors.py  setup.py  setup_build_env.py
src/simulator/: __init__.py  custom_logging.py  exemplo_interpretacao.py  gui_simulator.py  planador_simulator.py
tests/: README.md
tests/hardware/: hardware_test.py
tests/integration/: test_full_system.py  test_system_integration.py
tests/unit/: test_main_esp32.py  test_main_system.py  test_pid_simple.py  test_platform.py  test_simulator.py  test_simulator_basic.py  test_system_functions.py
