[package]
name = "esp32-iot-template"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-idf-svc = { version = "0.47", default-features = false }
esp-idf-hal = { version = "0.42", default-features = false }
esp-idf-sys = { version = "0.33", default-features = false }
embedded-hal = "0.2"
log = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
embuild = "0.31"

[[bin]]
name = "main"
path = "src/rust/main.rs"

[profile.release]
opt-level = "s"
lto = true

[profile.dev]
debug = true
opt-level = "z"
